--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
   "name": "api-crud",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.ts",
+  "repository": "https://github.com/FinotelliCarlos/api-crud.git",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "start": "tsnd --transpile-only --respawn --ignore-watch node_modules server.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "FinotelliCarlos <carlos.finotelli@outlook.com>",
+  "license": "MIT",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "mongoose": "^5.10.9",
-    "mongoose-paginate": "^5.0.3",
-    "require-dir": "^1.2.0",
-    "sqlite": "^4.0.23"
+    "express": "^4.18.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "@types/express": "^4.17.13",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.2"
   }
 }
