--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "main": "server.ts",
   "repository": "https://github.com/FinotelliCarlos/api-crud.git",
   "scripts": {
-    "start": "tsnd --transpile-only --respawn --ignore-watch node_modules server.ts"
+    "dev:start": "tsnd --transpile-only --respawn --ignore-watch node_modules sr/server.ts",
+    "start": "nodemon dist/server.js",
+    "ts": "tsc"
   },
   "author": "FinotelliCarlos <carlos.finotelli@outlook.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
